Adding Video, editing text, adding new triangle pics

--- a/tier5.html
+++ b/tier5.html
@@ -525,6 +525,14 @@
     <div class="findingsCircle"></div>
 
     <div class="findingsText">
+      <p class="heavyText"><span class= "bold700">Users are willing to give feedback to improve Tier5&#39;s algorithm.</span> This has business implications as users may trial the product longer to verify if data improves.</p>
+    </div>
+</div>
+
+<div class="findings">
+    <div class="findingsCircle"></div>
+
+    <div class="findingsText">
       <p class="heavyText"><span class= "bold700">There are two very distinct types of salespeople with different requirements</span>: targeted bulk leads or targeted individual search.</p>
     </div>
 </div>
@@ -770,14 +778,17 @@
 <div class="prototypes">
   <div class="prototypeImgDiv">
     <img class="prototypeImg" alt="Paper Prototype" src="myimages/tier5/design/paper-proto.png">
+    <p class="protoTypes protoTypesPaper">Paper</p>
   </div>
 
   <div class="prototypeImgDiv">
   <img class="prototypeImg" alt="Low Fidelity Prototype" src="myimages/tier5/design/low-fid-proto.png">
+  <p class="protoTypes protoTypesLow">Low Fidelity Digital</p>
   </div>
 
   <div class="prototypeImgDiv">
   <img class="prototypeImg" alt="Medium Fidelity Prototype" src="myimages/tier5/design/med-fid-proto.png">
+    <p class="protoTypes">Medium Fidelity Digital</p>
   </div>
 </div>
 
@@ -1010,9 +1021,12 @@
     </div>
 
   <div><p class="statement">Our interactive prototype</div>
+    <div class="videoDiv">
+      <div class="iframe">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/UZjq_8NUv1Q" frameborder="0" allowfullscreen></iframe>
+      </div>
+    </div>
 
-<div class="prototypeLink">
-  Click <a  href="https://invis.io/GM3VZTGAD">here</a> to see prototype.</div>
 
 <div class="statement statmentOrange logoTitle">Tier 5 logo redesign with user feedback</div>
 
