remove periods in title

--- a/tier5.html
+++ b/tier5.html
@@ -662,7 +662,7 @@
       <img class="userFlowImg" alt="Downward facing bracket" src="myimages/tier5/synthesis/user-flow.png">
     </div>
 
-    <div class="statement octoOrange">The problem: redefined.</div>
+    <div class="statement octoOrange">The problem: redefined</div>
 <div class="problem">
     <p class="problemTitle octoOrange">We found that the salesperson&#39;s problem is two fold:</p>
     <div class="bullet">
