changing order of text points

--- a/tier5.html
+++ b/tier5.html
@@ -517,7 +517,7 @@
     <div class="findingsCircle1"></div>
 
     <div class="findingsText">
-      <p class="heavyText"><span class= "bold700">Validated our strategic recommendation to add &#34;nurturing&#34; capabilities</span> to Tier5&#39;s design, something high in demand for both key types of salespeople.</p>
+        <p class="heavyText"><span class= "bold700">There are two very distinct types of salespeople with different requirements</span>: targeted bulk leads or targeted individual search.</p>
     </div>
 </div>
 
@@ -525,7 +525,8 @@
     <div class="findingsCircle"></div>
 
     <div class="findingsText">
-      <p class="heavyText"><span class= "bold700">Users are willing to give feedback to improve Tier5&#39;s algorithm.</span> This has business implications as users may trial the product longer to verify if data improves.</p>
+
+          <p class="heavyText"><span class= "bold700"> This validated our strategic recommendation to add &#34;nurturing&#34; capabilities</span> to Tier5&#39;s design, something high in demand for both key types of salespeople.</p>
     </div>
 </div>
 
@@ -533,7 +534,8 @@
     <div class="findingsCircle"></div>
 
     <div class="findingsText">
-      <p class="heavyText"><span class= "bold700">There are two very distinct types of salespeople with different requirements</span>: targeted bulk leads or targeted individual search.</p>
+
+        <p class="heavyText"><span class= "bold700">Users are willing to give feedback to improve Tier5&#39;s algorithm.</span> This has business implications as users may trial the product longer to verify if data improves.</p>
     </div>
 </div>
 
