--- a/tier5.html
+++ b/tier5.html
@@ -556,7 +556,7 @@
   <img class="journeyMap" alt="Salesperson's Journey Map" src="myimages/tier5/synthesis/journey-map.png">
 </div>
 
-  <p class="statement">Our personas detail two main salespeople types</p>
+  <p class="statement">Our personas detail two main salespeople types.</p>
 
 <div class="row personaParent">
   <!-- Ajay -->
