Adding in Approach section

--- a/tier5.html
+++ b/tier5.html
@@ -4,7 +4,7 @@
 
   <head>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 
         <!-- BOOTSTRAP-Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -175,6 +175,7 @@
     </div>
 
       <div><p class="statement statmentOrange">Focus on competing only with lead generators.</p></div>
+<div class="tableGrandparent">
 
 <div class="table-responsive tableParent center-table">
     <table class="compTable table table-borderless">
@@ -318,7 +319,7 @@
       </tr>
     </table>
   </div>
-
+</div>
       <div><p class="statement statmentOrange">Opportunities to improve on the competition.</p></div>
       <div class="features">
       <img class="featureCompImg" alt="feature Prioritization Chart" src="myimages/tier5/strategy/feature-competition.png">
@@ -1102,13 +1103,13 @@
 </div>
 
 <!-- NEXT PORTFOLIO SECTION -->
-<div class="processSectionTitleUpNextTier processSectionTitleUpNext">
+<div class="processSectionTitle processSectionTitleUpNextTier processSectionTitleUpNext">
   <div class="col-xs-12 col-sm-4 col-md-5 col-lg-6 ">Up Next</div>
   <!-- col-sm-5 -->
   <div class="col-xs-12 col-sm-8 col-md-offset-1 col-md-6 col-lg-offset-1 col-lg-5">
     <!-- col-sm-offset-1 col-sm-6  -->
     <a href="webmd.html">
-      <p class="nextPort arrowAndText">WebMD Mobile App with Companion Wearable</p>
+      <p class="nextPort nextPortTier arrowAndText">WebMD Mobile App with Companion Wearable</p>
       <img class="arrowPort arrowAndText" alt="Connect Icon" src="myimages/arrow-port.png">
     </a>
   </div>
