--- a/about.html
+++ b/about.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <title>Jessica Davies UX Design: About Me</title>
     <!-- <link  rel="stylesheet" href="home.css" media="screen" charset="utf-8"> -->
       <link  rel="stylesheet" href="nav.css" media="screen" charset="utf-8">
       <link  rel="stylesheet" href="footer.css" media="screen" charset="utf-8">
+      <link  rel="stylesheet" href="project.css" media="screen" charset="utf-8">
       <link  rel="stylesheet" href="all-files.css" media="screen" charset="utf-8">
       <link  rel="stylesheet" href="about.css" media="screen" charset="utf-8">
       <!-- DOESN'T WORK -->
@@ -46,8 +48,6 @@
             <div class="clearFix"></div>
         </header>
           <a href="index.html"><img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png"></a>
-            <!-- <a href="index.html"><img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png"><a/> -->
-            <!-- header div -->
       </div>
 
   <div id="content">
@@ -75,7 +75,7 @@
       </p>
       <p id="jobLocation">San Francisco &amp; New York</p>
 
-      <div id="contactInfo">
+      <div>
         <ul>
           <li class="deetsLi"><img class="deetsImg" alt="Phone Emoji" src="myimages/about/phone-icon.png"></li>
           <li class="deetsLi"><a class="anchor" href="tel:+19259688212">(925) 968-8212</a></li>
@@ -91,14 +91,45 @@
       </div>
     </div>
 
-    <div id="approach"><p class="sectionTitle">Approach</p></div>
+    <div class="processSectionTitle processSectionTitleAbout approachTitleAbout"><p>Approach</p></div>
+
+    <div class="approach">
+
+            <div class="approachSections">
+              <div class="approachCircle twoWordCircle"><p>Business Strategy</p></div>
+              <div class="approachText">
+                <div class="heavyText"><p>As a designer, I always start with the business first. The design mantra is if the users aren&#39;t happy, you don&#39;t have a business. I couldn&#39;t agree more. But it goes both ways. If you don&#39;t have solid business strategy than you won&#39;t be able to sustainably offer any products to your users. <b>I believe am unique in that I can look at things with a design eye, without ever talking my eye of the end game &#45; making the business profitable.</b></p></div>
+              </div>
+          </div>
+
+            <div class="approachSections">
+                <div class="approachCircle"><p class="oneWordCircle">Ideation</p></div>
+                <div class="approachText">
+                  <div class="approachPointsAbout heavyText"><p>People are highly suggestible and extensive research of a product or its competitors can often lead to a flat &#34;me too&#34; designs. <b>I prefer ideate first with only a very basic knowledge of the product. I believe this results in the most novel designs.</p></b></div>
+                </div>
+            </div>
+
+            <div class="approachSections">
+                <div class="approachCircle"><p class=" oneWordCircle">Research</p></div>
+              <div class="approachText ">
+                <div class="approachPointsAbout  heavyText"><p><b>Throughout my career, research has always played an integral part.</b> I enjoy talking to all types of people, hearing about the product from their point of view. Repeated research is the only way to confirm the correct strategic direction.</p></div>
+              </div>
+            </div>
+
+            <div class="approachSections">
+              <div class="approachCircle approachCircle4"><p class="oneWordCircle">Design</p></div>
+              <div class="approachText ">
+                <div class="approachPointsAbout heavyText"><p><b>My approach is to never hold back.</b> Never say it can’t be done, it&#45;s a bad idea, or my least favorite: &#34;but we have always done it this way.&#34; Sketch it all out. Change it. Check viability with engineering. <b>Make a decision. Test. Rinse. Repeat.</b></p></div>
+              </div>
+            </div>
+    </div>
 <!-- SKILL TABLES -->
-<div class="tableTitle"><p class="tableTitleP">UX Methods</p></div>
+<div class="processSectionTitle processSectionTitleAbout"><p>UX Methods</p></div>
     <div class="softDiv">
-            <table class="swTable" >
+            <table class="swTable">
               <tr>
-                <th class="method">Method</th>
-                <th class="grade">Level</th>
+                <th class="method tableTitleSkil">Method</th>
+                <th class="grade tableTitleSkil">Level</th>
               </tr>
                 <tr>
                   <td class="method">Body storming</td>
@@ -106,9 +137,9 @@
                   <td><img class ="software" alt="Queen Emoji" src="myimages/about/advanced-emoji.png"></td>
                 </tr>
                 <tr>
-                  <td class="method">Competitive analysis</td>
-                  <td class="grade">Expert</td>
-                  <td><img class ="software" alt="Skull and Cross Bones Emoji" src="myimages/about/expert-emoji.png"></td>
+                  <td class="method zebra">Competitive analysis</td>
+                  <td class="grade zebra">Expert</td>
+                  <td class="zebra"><img class ="software" alt="Skull and Cross Bones Emoji" src="myimages/about/expert-emoji.png"></td>
                 </tr>
                 <tr>
                   <td class="method">Design Studio</td>
@@ -116,9 +147,9 @@
                   <td><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
                 </tr>
                 <tr>
-                  <td class="method">Empathy mapping</td>
-                  <td class="grade">Intermediate</td>
-                  <td><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
+                  <td class="method zebra">Empathy mapping</td>
+                  <td class="grade zebra">Intermediate</td>
+                  <td class="zebra"><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
                 </tr>
                 <tr>
                   <td class="method">Guerilla research</td>
@@ -126,23 +157,23 @@
                   <td><img class ="software" alt="Skull and Cross Bones Emoji" src="myimages/about/expert-emoji.png"></td>
                 </tr>
                 <tr>
-                  <td class="method">Heuristic evaluation</td>
-                  <td class="grade">Intermediate</td>
-                  <td><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
+                  <td class="method zebra">Heuristic evaluation</td>
+                  <td class="grade zebra">Intermediate</td>
+                  <td class="zebra"><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
                 </tr>
 
             </table>
 
             <table class="swTable" >
               <tr>
-                <th class="method">Method</th>
-                <th class="grade">Level</th>
+                <th class="method tableTitleSkil">Method</th>
+                <th class="grade tableTitleSkil">Level</th>
               </tr>
 
               <tr>
-                <td class="method">Ideation</td>
-                <td class="grade">Advanced</td>
-                <td><img class ="software" alt="Queen Emoji" src="myimages/about/advanced-emoji.png"></td>
+                <td class="method zebra">Ideation</td>
+                <td class="grade zebra">Advanced</td>
+                <td class="zebra"><img class ="software" alt="Queen Emoji" src="myimages/about/advanced-emoji.png"></td>
               </tr>
 
                 <tr>
@@ -151,9 +182,9 @@
                   <td><img class ="software" alt="Skull and Cross Bones Emoji" src="myimages/about/expert-emoji.png"></td>
                 </tr>
                 <tr>
-                  <td class="method">Journey mapping</td>
-                  <td class="grade">Intermediate</td>
-                  <td><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
+                  <td class="method zebra">Journey mapping</td>
+                  <td class="grade zebra">Intermediate</td>
+                  <td class="zebra"><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
                 </tr>
                 <tr>
                   <td class="method">Market Research</td>
@@ -161,9 +192,9 @@
                   <td><img class ="software" alt="Skull and Cross Bones Emoji" src="myimages/about/expert-emoji.png"></td>
                 </tr>
                 <tr>
-                  <td class="method">Personas</td>
-                  <td class="grade">Intermediate</td>
-                  <td><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
+                  <td class="method zebra">Personas</td>
+                  <td class="grade zebra">Intermediate</td>
+                  <td class="zebra"><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
                 </tr>
                 <tr>
                   <td class="method">Rapid prototyping</td>
@@ -175,14 +206,14 @@
 
             <table class="swTable" >
               <tr>
-                <th class="method">Method</th>
-                <th class="grade">Level</th>
+                <th class="method tableTitleSkil">Method</th>
+                <th class="grade tableTitleSkil">Level</th>
               </tr>
 
               <tr>
-                <td class="method">Site mapping</td>
-                <td class="grade">Intermediate</td>
-                <td><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
+                <td class="method zebra">Site mapping</td>
+                <td class="grade zebra">Intermediate</td>
+                <td class="zebra"><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
               </tr>
                 <tr>
                   <td class="method">Sketching</td>
@@ -190,9 +221,9 @@
                   <td><img class ="software" alt="Queen Emoji" src="myimages/about/advanced-emoji.png"></td>
                 </tr>
                 <tr>
-                  <td class="method">Surveys</td>
-                  <td class="grade">Advanced</td>
-                  <td><img class ="software" alt="Queen Emoji" src="myimages/about/advanced-emoji.png"></td>
+                  <td class="method zebra">Surveys</td>
+                  <td class="grade zebra">Advanced</td>
+                  <td class="zebra"><img class ="software" alt="Queen Emoji" src="myimages/about/advanced-emoji.png"></td>
                 </tr>
                 <tr>
                   <td class="method">Task analysis</td>
@@ -200,9 +231,9 @@
                   <td><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
                 </tr>
                 <tr>
-                  <td class="method">User flows</td>
-                  <td class="grade">Intermediate</td>
-                  <td><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
+                  <td class="method zebra">User flows</td>
+                  <td class="grade zebra">Intermediate</td>
+                  <td class="zebra"><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
                 </tr>
                 <tr>
                   <td class="method">User research</td>
@@ -213,13 +244,13 @@
             </table>
           </div>
 
-<div class="tableTitle"><p class="tableTitleP">Software &amp Languages</p></div>
+<div class="processSectionTitle processSectionTitleAbout"><p>Software &amp Languages</p></div>
     <div class="softDiv">
 
               <table class="swTable" >
                 <tr>
-                  <th class="method">Software</th>
-                  <th class="grade">Level</th>
+                  <th class="method tableTitleSkil">Software</th>
+                  <th class="grade tableTitleSkil">Level</th>
                 </tr>
                   <tr>
                     <td class="method">Atom/Sublime</td>
@@ -253,8 +284,8 @@
 
               <table class="swTable">
                 <tr>
-                  <th class="method">Software</th>
-                  <th class="grade">Level</th>
+                  <th class="method tableTitleSkil">Software</th>
+                  <th class="grade tableTitleSkil">Level</th>
                 </tr>
                 <tr>
                   <td class="method">Keynote</td>
@@ -285,8 +316,8 @@
               </table>
               <table class="swTable">
                 <tr>
-                  <th class="method">Language</th>
-                  <th class="grade">Level</th>
+                  <th class="method tableTitleSkil">Language</th>
+                  <th class="grade tableTitleSkil">Level</th>
                 </tr>
 
                 <tr>
@@ -319,13 +350,13 @@
             </table>
 
 </div>
-            <div class="tableTitle"><p class="tableTitleP">Other Skills</p></div>
+            <div class="processSectionTitle processSectionTitleAbout"><p>Other Skills</p></div>
                 <div class="softDiv">
 
                           <table class="swTable">
                             <tr>
-                              <th class="method">Skill</th>
-                              <th class="grade">Level</th>
+                              <th class="method tableTitleSkil">Skill</th>
+                              <th class="grade tableTitleSkil">Level</th>
                             </tr>
 
                             <tr>
@@ -355,8 +386,8 @@
 
                           <table class="swTable">
                             <tr>
-                              <th class="method">Skill</th>
-                              <th class="grade">Level</th>
+                              <th class="method tableTitleSkil">Skill</th>
+                              <th class="grade tableTitleSkil">Level</th>
                             </tr>
 
                             <tr>
@@ -383,8 +414,8 @@
                           </table>
                           <table class="swTable">
                             <tr>
-                              <th class="method">Skill</th>
-                              <th class="grade">Level</th>
+                              <th class="method tableTitleSkil">Skill</th>
+                              <th class="grade tableTitleSkil">Level</th>
                             </tr>
                             <tr>
                               <td class="method">Portuguese</td>
