Checking about for Responsive and Typos

--- a/about.html
+++ b/about.html
@@ -54,13 +54,15 @@
 
       <div id="mainImg">
           <div id="myPicDiv">
-            <ul id="quote">
-              <li class="topQuote"><img id="quoteLeft" class="quoteImg" alt="Quotation mark" src="myimages/about/quote-left.png"></li>
-                <li><p class="quoteText topQuote">Start with the</p></li>
-                <li><p class="quoteText">business, not</p></li>
-                <li class="quoteText bottomQuote"><p>the tech.</p></li>
-                <li class="bottomQuote"><img class="quoteImg" alt="Quotation mark" src="myimages/about/quote-right.png"></li>
-            </ul>
+            <div class="quoteParent">
+              <ul id="quote">
+                <li class="topQuote"><img id="quoteLeft" class="quoteImg" alt="Quotation mark" src="myimages/about/quote-left.png"></li>
+                  <li><p class="quoteText topQuote">Start with the</p></li>
+                  <li><p class="quoteText">business, not</p></li>
+                  <li class="quoteText bottomQuote"><p>the tech.</p></li>
+                  <li class="bottomQuote"><img class="quoteImg" alt="Quotation mark" src="myimages/about/quote-right.png"></li>
+              </ul>
+            </div>
             <img id="myPic" alt="Designers Picture" src="myimages/about/me.jpg">
           </div>
 
@@ -71,7 +73,7 @@
       <p class="sectionTitleJ">Jessica Davies</p>
 
       <p id="jobTitle">
-        Strategist | UX Designer | Heathcare SME
+        Strategist | UX Designer | FE Developer | Heathcare SME
       </p>
       <p id="jobLocation">San Francisco &amp; New York</p>
 
@@ -293,7 +295,7 @@
                   <td><img class ="software" alt="Queen Emoji" src="myimages/about/advanced-emoji.png"></td>
                 </tr>
                   <tr>
-                    <td class="method">Omnigraffle</td>
+                    <td class="method">OmniGraffle</td>
                     <td class="grade">Beginner</td>
                     <td><img class ="software" alt="Turkey Emoji" src="myimages/about/turkey-emoji.png"></td>
                   </tr>
