--- a/beauty.html
+++ b/beauty.html
@@ -62,10 +62,10 @@
     <img id="spaMask" alt="spa mask" src="myimages/beauty.jpg">
 
     <!-- BOTTOM ARROW TO NEXT PORTFOLIO -->
-          <div class="portArrowBottomSec processSectionTitleUpNext processSectionTitleUpNextWeb">
-            <div class="col-xs-12 col-sm-2 col-md-5 col-lg-6">Up Next</div>
+          <div class="portArrowBottomSec processSectionTitle processSectionTitleUpNext processSectionTitleUpNextBeauty">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">Up Next</div>
             <!-- col-sm-5 -->
-            <div class="col-xs-12 col-sm-10 col-md-offset-1 col-md-6 col-lg-offset-4 col-lg-2">
+            <div class="col-xs-12 col-md-offset-1 col-sm-5 col-md-offset-1 col-md-5 col-lg-offset-2 col-lg-4">
               <!-- col-sm-offset-1 col-sm-6  -->
               <a class="nextportRight" href="emoji-libs-port.html">
                 <p class="nextPort arrowAndText ">Emoji-Libs Original Website</p>
