--- a/emoji-libs-port.html
+++ b/emoji-libs-port.html
@@ -61,10 +61,10 @@
     <a href="https://jcdaviesauthor.github.io/FEWD37/final-project/index.html"><img id="emoji" alt="Emoji-Libs Website" src="myimages/emoji-libs.png"></a>
 
 <!-- BOTTOM ARROW TO NEXT PORTFOLIO -->
-    <div class="portArrowBottomSec processSectionTitleUpNext processSectionTitleUpNextWeb">
-      <div class="col-xs-12 col-sm-2 col-md-5 col-lg-6">Up Next</div>
+    <div class="portArrowBottomSec processSectionTitle processSectionTitleUpNext processSectionTitleUpNextWeb">
+      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">Up Next</div>
       <!-- col-sm-5 -->
-      <div class="col-xs-12 col-sm-10 col-md-offset-1 col-md-6 col-lg-offset-1 col-lg-5">
+      <div class="col-xs-12 col-md-offset-1 col-sm-5 col-md-offset-4 col-md-2 col-lg-offset-4 col-lg-2">
         <!-- col-sm-offset-1 col-sm-6  -->
         <a class="nextportRight" href="tier5.html">
           <p class="nextPort arrowAndText ">Tier 5</p>
