--- a/webmd.html
+++ b/webmd.html
@@ -49,8 +49,6 @@
           <div class="clearFix"></div>
       </header>
         <a href="index.html"><img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png"></a>
-          <!-- <a href="index.html"><img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png"><a/> -->
-          <!-- header div -->
     </div>
 
 <div id="content">
@@ -66,7 +64,7 @@
       <a class="source" href="https://c1.staticflickr.com/3/2389/2073509907_345ad52bc1.jpg">Source</a>
 
 <!-- BOTTOM ARROW TO NEXT PORTFOLIO -->
-      <div class="portArrowBottomSec processSectionTitleUpNext processSectionTitleUpNextWeb">
+      <div class="portArrowBottomSec processSectionTitle processSectionTitleUpNext processSectionTitleUpNextWeb">
         <div class="col-xs-12 col-sm-3 col-md-4 col-lg-6">Up Next</div>
         <!-- col-sm-5 -->
         <div class="col-xs-12 col-sm-8 col-md-offset-1 col-md-6 col-lg-offset-1 col-lg-5 text-right floatLeft">
