Cleaning up code

--- a/index.html
+++ b/index.html
@@ -90,9 +90,6 @@
                 <div class="projectBack"style="text-align:left">
                   <ul class="titleDown">
                     <li class="liInline companyTitle darkText">Tier 5</li>
-                      <!-- WILL NEED TO ADD THI BACK -->
-                    <!-- <li class="liInline"><img id="iconTier"class ="icon" alt="Picture of World" src="myimages/home/web-logo-dark.png"></li> -->
-
                   </ul>
                   <p class="projectDes darkText" style="text-align:left">Re-designed all aspects of start-up's outbound web-based sales platform. Increased market opportunity by 3x.</p>
                   <button class="darkButton backButton" type="button" onclick="location.href='tier5.html';">see more</button>
@@ -173,7 +170,7 @@
 </section>
 
     <div id="buttonDiv">
-      <button  id="devButton" type="button" onclick="location.href='../FEWD37/index.html';">Dev Portfolio</button>
+      <button  id="devButton" type="button" onclick="location.href='../FEWD37/index.html';">Dev Portfolio Website</button>
     </div>
     <!-- content div -->
       </div>
