--- a/about.html
+++ b/about.html
@@ -33,15 +33,11 @@
                 </div>
               </div>
 
-            <!-- <nav id = "navHome" class="navbar navbar-light bg-faded"> -->
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <!-- <a class="navbar-brand" href="#">Responsive navbar</a> -->
                 <ul id="navUl" class="nav-inline nav navbar-nav">
-                  <!-- <div class="row"> -->
                   <li class="homeBarli nav-item" id= "homeHome"><a href="index.html">Portfolio</a></li>
                   <li class="homeBarli nav-item" id= "resumeHome"><a href="https://www.linkedin.com/in/jessica-davies-cfa-46009b13">Resume</a></li>
                   <li class="homeBarli nav-item" id= "aboutHome"><a href="about.html">About</a></li>
-                  <!-- </div> -->
                 </ul>
               </div>
           </nav>
@@ -51,7 +47,6 @@
       </div>
 
   <div id="content">
-
       <div id="mainImg">
           <div id="myPicDiv">
             <img id="myPic" alt="Designers Picture" src="myimages/about/me.jpg">
@@ -62,9 +57,7 @@
                   <li class="quoteText bottomQuote"><p>the tech.</p></li>
                   <li class="bottomQuote"><img class="quoteImg" alt="Quotation mark" src="myimages/about/quote-right.png"></li>
               </ul>
-        
           </div>
-
         </div>
 
     <div id="contact">
@@ -99,7 +92,7 @@
             <div class="approachSections">
               <div class="approachCircle twoWordCircle"><p>Business Strategy</p></div>
               <div class="approachText">
-                <div class="heavyText"><p>As a designer, I always start with the business first. The design mantra is if the users aren&#39;t happy, you don&#39;t have a business. I couldn&#39;t agree more. But it goes both ways. If you don&#39;t have solid business strategy than you won&#39;t be able to sustainably offer any products to your users. <b>I believe am unique in that I can look at things with a design eye, without ever talking my eye of the end game &#45; making the business profitable.</b></p></div>
+                <div class="heavyText"><p>As a designer, I always start with the business first. The design mantra is if the users aren&#39;t happy, you don&#39;t have a business. I couldn&#39;t agree more. But it goes both ways. If you don&#39;t have solid business strategy then you won&#39;t be able to sustainably offer any products to your users. <b>I believe I am unique in that I can look at things with a design eye, without ever talking my eye of the end game &#45; making the business profitable.</b></p></div>
               </div>
           </div>
 
@@ -120,7 +113,7 @@
             <div class="approachSections">
               <div class="approachCircle approachCircle4"><p class="oneWordCircle">Design</p></div>
               <div class="approachText ">
-                <div class="approachPointsAbout heavyText"><p><b>My approach is to never hold back.</b> Never say it can’t be done, it&#45;s a bad idea, or my least favorite: &#34;but we have always done it this way.&#34; Sketch it all out. Change it. Check viability with engineering. <b>Make a decision. Test. Rinse. Repeat.</b></p></div>
+                <div class="approachPointsAbout heavyText"><p><b>My approach is to never hold back.</b> Never say it can’t be done, it&#39;s a bad idea, or my least favorite: &#34;but we have always done it this way.&#34; Sketch it all out. Change it. Check viability with engineering. <b>Make a decision. Test. Rinse. Repeat.</b></p></div>
               </div>
             </div>
     </div>
