Add UX researcher

--- a/index.html
+++ b/index.html
@@ -70,9 +70,10 @@
         <p>
           <span class="word sunset">Strategist.</span>
           <span class="word octoGreen">UX Designer.</span>
-          <span class="word octoOrange">Developer.</span>
+          <span class="word octoOrange">Researcher.</span>
+          <span class="word octoGreen">Developer.</span>
           <span class="word sunset">Healthcare SME.</span>
-          <span class="word octoGreen">Skydiver.</span>
+          <span class="word octoOrange">Skydiver.</span>
         </p>
       </div>
     </div>
