fix typo in my role

--- a/tier5.html
+++ b/tier5.html
@@ -80,7 +80,7 @@
             <!-- col-md-offset-1 -->
               <!-- <div class="center-block"> -->
             <p class="boxTitle">My Role</p>
-            <p class="boxText heavyText">Over 2 a two-week period our very close-knit, two-person team worked collaboratively on every aspect of UX Design process: research, heuristic evaluation, competitive analysis, user interviews, user testing, design, sketching, prototyping, and presenting our work.
+            <p class="boxText heavyText">Over a two-week period our very close-knit, two-person team worked collaboratively on every aspect of UX Design process: research, heuristic evaluation, competitive analysis, user interviews, user testing, design, sketching, prototyping, and presenting our work.
           </p>
         <!-- </div> -->
       </div>
