Adding structure for WebMD

--- a/webmdtemp1.html
+++ b/webmdtemp1.html
@@ -9,12 +9,12 @@
     <!-- BOOTSTRAP-Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-    <title>Jessica Davies UX Design Project 1: Tier 5 </title>
+    <title>Jessica Davies: WebMD Wearable</title>
     <link  rel="stylesheet" href="all-files.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="nav.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="footer.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="project.css" media="screen" charset="utf-8">
-    <link  rel="stylesheet" href="tier5.css" media="screen" charset="utf-8">
+    <link  rel="stylesheet" href="webmd.css" media="screen" charset="utf-8">
   </head>
   <body>
       <div id='wrapper'>
@@ -24,7 +24,7 @@
             <header>
           <!-- navbar-default is an add in to change color -->
           <nav class="navbar navbar-default"  role="navigation">
-              <div class="containerOcto">
+              <div>
                   <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                           <span class="sr-only">Toggle navigation</span>
@@ -62,23 +62,22 @@
             <img class="projectLogo" class="pictwo" alt="Tier 5 Octopus Logo" src="myimages/tier5/introduction/tier5-hula-left.png">
           </div>
 
-            <p class="projectTitleSize projectTitle">Tier5 Outbound Sales Lead Generating Platform</p>
+            <p class="projectTitleSize projectTitle">WebMD Biometric Gerated News & Companion Wearable</p>
 
         </div>
         <div class="introBoxes row">
           <div class="introBox col-xs-6">
-            <!-- <div class="center-block"> -->
-            <p class="boxTitle">The Client</p>
-            <p class="boxText heavyText">Tier5, an early stage start-up, engaged us to give their outbound sales-lead generating platform a visual facelift. But after our extensive research we found the Company's UX Design and even part of their business model also needed a rebuild. Our redesign increased their market opportunity by 3x.
+            <p class="boxTitle">Our Challange</p>
+            <p class="boxText heavyText">Our challege was to come up with a new way to to use the vast amount of content available tua, engaged us to give their outbound sales-lead generating platform a visual facelift. But after our extensive research we found the Company's UX Design and even part of their business model also needed a rebuild. Our redesign increased their market opportunity by 3x.
           </p>
-            <!-- </div> -->
+
           </div>
 
           <div class="introBox col-xs-6 col-md-offset-1 ">
             <!-- col-md-offset-1 -->
               <!-- <div class="center-block"> -->
             <p class="boxTitle">My Role</p>
-            <p class="boxText heavyText">Over a two-week period our very close-knit, two-person team worked collaboratively on every aspect of UX Design process: research, heuristic evaluation, competitive analysis, user interviews, user testing, design, sketching, prototyping, and presenting our work.
+            <p class="boxText heavyText">Over a two-week period three-person team worked both collaboratively and every aspect of UX Design process: research, heuristic evaluation, competitive analysis, user interviews, user testing, design, sketching, prototyping, and presenting our work.
           </p>
         <!-- </div> -->
       </div>
