adding intro and strategy to web md, organizing across-project classes

--- a/tier5.html
+++ b/tier5.html
@@ -58,11 +58,11 @@
         <div class="projectTitleBox titleBackgroundTier container">
 <!-- a was div -->
           <div class= "container image-swap" href="#">
-            <img class="projectLogo" class="picone" alt="Tier 5 Octopus Logo" src="myimages/home/tier5-hula-right.png">
-            <img class="projectLogo" class="pictwo" alt="Tier 5 Octopus Logo" src="myimages/tier5/introduction/tier5-hula-left.png">
+            <img class="projectLogoTier" class="picone" alt="Tier 5 Octopus Logo" src="myimages/home/tier5-hula-right.png">
+            <img class="projectLogoTier" class="pictwo" alt="Tier 5 Octopus Logo" src="myimages/tier5/introduction/tier5-hula-left.png">
           </div>
 
-            <p class="projectTitleSize projectTitle">Tier5 Outbound Sales Lead Generating Platform</p>
+            <p class="projectTitle">Tier5 Outbound Sales Lead Generating Platform</p>
 
         </div>
         <div class="introBoxes row">
