Fixing about page for web, responsive still has issues

--- a/about.html
+++ b/about.html
@@ -42,12 +42,27 @@
               </div>
           </nav>
             <div class="clearFix"></div>
+
         </header>
           <a href="index.html"><img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png"></a>
+
+          <div id="mainImg">
+              <div id="myPicDiv">
+                <!-- <img id="myPic" alt="Designers Picture" src="myimages/about/me.jpg"> -->
+                  <ul id="quote">
+                      <li class="topQuote"><img id="quoteLeft" class="quoteImg" alt="Quotation mark" src="myimages/about/quote-left.png"></li>
+                      <li><p class="quoteText topQuote">Start with the</p></li>
+                      <li><p class="quoteText">business, not</p></li>
+                      <li class="quoteText bottomQuote"><p>the tech.</p></li>
+                      <li class="bottomQuote"><img class="quoteImg" alt="Quotation mark" src="myimages/about/quote-right.png"></li>
+                  </ul>
+              </div>
+            </div>
+            <!-- id header -->
       </div>
 
   <div id="content">
-      <div id="mainImg">
+      <!-- <div id="mainImg">
           <div id="myPicDiv">
             <img id="myPic" alt="Designers Picture" src="myimages/about/me.jpg">
               <ul id="quote">
@@ -58,7 +73,7 @@
                   <li class="bottomQuote"><img class="quoteImg" alt="Quotation mark" src="myimages/about/quote-right.png"></li>
               </ul>
           </div>
-        </div>
+        </div> -->
 
     <div id="contact">
 
@@ -113,7 +128,7 @@
             <div class="approachSections">
               <div class="approachCircle approachCircle4"><p class="oneWordCircle">Design</p></div>
               <div class="approachText ">
-                <div class="approachPointsAbout heavyText"><p><b>My approach is to never hold back.</b> Never say it can’t be done, it&#39;s a bad idea, or my least favorite: &#34;but we have always done it this way.&#34; Sketch it all out. Change it. Check viability with engineering. <b>Make a decision. Test. Rinse. Repeat.</b></p></div>
+                <div class="approachPointsAbout heavyText"><p><b>My approach is to never hold back.</b> Never say it can&#39;t be done, it&#39;s a bad idea, or my least favorite: &#34;but we have always done it this way.&#34; Sketch it all out. Change it. Check viability with engineering. <b>Make a decision. Test. Rinse. Repeat.</b></p></div>
               </div>
             </div>
     </div>
