--- a/webmdtemp1.html
+++ b/webmdtemp1.html
@@ -68,31 +68,27 @@
         <div class="introBoxes row">
           <div class="introBox col-xs-6">
             <p class="boxTitle webmdGreen">Our Challange</p>
-            <p class="boxText heavyText">Our challege was to come up with a new way to to use the vast amount of content available on WebMD. The management believes that users want a more personalized experience. WebMD wants to increase acquistion and retention given competition in the online health space is growing rapidly.
+            <p class="boxText heavyText">WebMD is well known for being a key source of health issues and having a vast amount of content available to its users. However, given competition in the online health space is growing rapidly, the management believes that users want a more personalized experience.
           </p>
-
           </div>
 
           <div class="introBox col-xs-6 col-md-offset-1 ">
-            <!-- col-md-offset-1 -->
-              <!-- <div class="center-block"> -->
             <p class="boxTitle webmdGreen">My Role</p>
-            <p class="boxText heavyText"> I participated in all of the design processes, but my most prominent roles in the project were: presentation creation and delivery, survey development, interview question development, interviews, ideation, concept creation, design, task development, and user testing.
+            <p class="boxText heavyText"> We worked collaboratively, and each of us participated in the entire design processes, but my most prominent roles: presentation creation and delivery, survey and interview question development, interviews, ideation, concept creation, design, task analysis, and user testing.
           </p>
-        <!-- </div> -->
       </div>
         </div>
         <div class="ourProcess row">
             <p class="ourProcessTitle">Our Process</p>
             <div class="processCircleDiv">
               <div class="processCircle process twoLine"><a href="#strategySection"><p class="circleText">Business Strategy</p></a></div>
-              <img class="process arrow" alt="arrow" src="myimages/webmd/strategy/arrow-green.png">
+              <img class="process arrow" alt="arrow" src="myimages/webmd/intro/arrow-green.png">
               <div class="processCircle process twoLine"><a href="#researchSection"><p class="circleText">Research &amp; Discovery</p></a></div>
-              <img class="process arrow" alt="arrow" src="myimages/webmd/strategy/arrow-green.png">
+              <img class="process arrow" alt="arrow" src="myimages/webmd/intro/arrow-green.png">
               <div class="processCircle process oneLine"><a href="#synthesisSection"><p class="circleText">Synthesis</p></a></div>
-              <img class="process arrow" alt="arrow" src="myimages/webmd/strategy/arrow-green.png">
+              <img class="process arrow" alt="arrow" src="myimages/webmd/intro/arrow-green.png">
               <div class="processCircle process oneLine"><a href="#designSection"><p class="circleText">Design</p></a></div>
-              <img class="process arrow" alt="arrow" src="myimages/webmd/strategy/arrow-green.png">
+              <img class="process arrow" alt="arrow" src="myimages/webmd/intro/arrow-green.png">
               <div class="processCircle process twoLine"><a href="buildSection">
               <p class="circleText build">Build &amp;<br>Deliver</br></p></a></div>
             </div>
