adding new div for SWOT

--- a/webmdtemp1.html
+++ b/webmdtemp1.html
@@ -9,7 +9,7 @@
     <!-- BOOTSTRAP-Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-    <title>Jessica Davies: WebMD Wearable</title>
+    <title>Jessica Davies: WebMD App & Wearable</title>
     <link  rel="stylesheet" href="nav.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="footer.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="project.css" media="screen" charset="utf-8">
@@ -136,6 +136,9 @@
       <div class="swot">
         <div><p class="statement webmdGreen">SWOT</p></div>
         <img class="swotFly" alt="Fly & Swatter" src="myimages/webmd/strategy/fly-swot.png">
+    </div>
+    <div class="">
+
     </div>
 
       <div><p class="statement webmdBlue">Focus on competing only with lead generators.</p></div>
