--- a/webmdtemp1.html
+++ b/webmdtemp1.html
@@ -133,14 +133,41 @@
           </div>
   </div>
 
-      <div class="swot">
+
         <div><p class="statement webmdGreen">SWOT</p></div>
         <img class="swotFly" alt="Fly & Swatter" src="myimages/webmd/strategy/fly-swot.png">
-    </div>
-    <div class="">
+  <div class="swot">
 
+    <div class="topSwot">
+      <div class="strengthWeak swotRec webmdBlueBack">
+        <p class="swotTitle">Strengths</p>
+        <p>- Strong SEO, top of most of healthcares searches</p>
+        <p>- Easy to understand, uses layman&#39;s terms</p>
+        <p>- Allows people to advocate for themselves with their doctor</p>
+      </div>
+      <div class="strengthWeak  swotRec webmdBlueBack">
+        <p class="swotTitle">Weaknesses</p>
+        <p>- Perceived as having  &#34;fluffy &#34; articles, not definitive answers or statistics</p>
+        <p>- Main revenue source, ads, deters customer retention</p>
+        <p>- TMI, too much information, users get lost</p>
+      </div>
     </div>
 
+    <div class="bottomSwot">
+      <div class="oppThreats  swotRec webmdBlueBack">
+        <p class="swotTitle">Opportunities</p>
+        <p>- API opportunity with health apps and wearable makers</p>
+        <p>- Wearable co-promotion with Garmin wearable could bring web MD from 4x times a year to a daily habit<p>
+        <p>- Could co-market wearable on WebMD site</p>
+      </div>
+      <div class="oppThreats swotRec webmdBlueBack">
+        <p class="swotTitle">Threats</p>
+        <p>- Competitors sites are very well respected sources of health care information</p>
+        <p>- Health care start-ups for health & information and wearables gaining ground</p>
+        </p>
+      </div>
+    </div>
+  </div>
       <div><p class="statement webmdBlue">Focus on competing only with lead generators.</p></div>
 
       <div><p class="statement webmdGreen">Opportunities to improve on the competition.</p></div>
