add research summary update cover photo

--- a/webmdtemp1.html
+++ b/webmdtemp1.html
@@ -187,36 +187,9 @@
       </div>
 
     <div class="processSectionTitle" id="researchSection">Research &amp Discovery</div>
-
-      <div class="surveyAndInterview">
-        <div class="researchPeepsContainer">
-          <div class="peepsStats width researchInline">
-            <p class= "researchNumbers octoOrange">21</p>
-            <p>Sales Representatives Surveyed</p>
-          </div>
-            <img class="peeps topPeep researchInline" alt="People Icon" src="myimages/tier5/research/peeps.png">
-            <div class="researchDes heavyText researchInline">
-              <p>
-                In order to understand what a sales representative needs, we created survey questions about their prospecting, qualifying, and closing process. This gave us a great initial direction on our designs and helped us to develop our more extensive interview questions.
-              </p>
-            </div>
-          </div>
-
-        <div class="researchPeepsContainer">
-          <div class="peepsStats width researchInline">
-            <p class= "researchNumbers octoOrange">10</p>
-            <p>Users Interviewed</p>
-          </div>
-
-          <img class=" researchInline peeps"alt="People Icon" src="myimages/tier5/research/peeps.png">
-
-          <div class="researchDes heavyText researchInline">
-          <p>
-          The interview process gave us a more in-depth perspective about how salespeople go about nurturing clients and up selling.
-          </p>
-          </div>
-        </div>
-      </div>
+    <div class="researchSummaryDiv">
+      <img class="researchSummary" alt="Summary of Research" src="myimages/webmd/research/research-summary.png">
+    </div>
 
   <div><p class="statement">Survey resulted in 3 key insights.</p></div>
 
