updated git hub causing mobile offset

--- a/beauty.html
+++ b/beauty.html
@@ -78,7 +78,7 @@
 
 <div id="footer">
   <footer>
-        <ul id="footerUl" class="row">
+        <ul id="footerUl" class="row footRow">
           <div class="col-xs-12 col-sm-5 col-md-6">
             <!-- class="footerDivs"> -->
             <!-- class="col-xs-12 col-sm-5 col-md-6" -->
