Adding interview subjects

--- a/webmdtemp1.html
+++ b/webmdtemp1.html
@@ -199,32 +199,31 @@
 <div class="squareRec">
 
   <div class="squareRecSec recPaddimg">
-    <div class="rec rec1 heavyText">
-      <p> It&#39;s hard to make a good first impression
-      </p>
+    <div class="rec rec1">
+      <p class="interviewTopTitle"> Wants Alerts</p>
     </div>
-
+    <img class="faceCircles" alt="Picture of Research Subject" src="myimages/webmd/research/warren.png">
     <div class= "square heavyText">
-      <p>&#34;Approaching any lead takes lots of sweat, diligence  and calling in favors.&#34;
-      </p>
-      </div>
-
-    <img class="faceCircles" alt="3 Circles" src="myimages/tier5/research/saleswoman1.png">
-
+      <p>&#34;I could see using one in the future, especially if it would alert someone automatically if I had a stroke…or would remind me to take my meds, I wouldn’t forget like I do now.&#34;</p>
+      <p class="interviewTitle"><b>Warren</b>, 95, Retired</p>
+    </div>
   </div>
 
   <div class="squareRecSec recPaddimg">
     <div class="rec rec2">
-      <p>Finding contact information is time consuming.
+        <p class="interviewTopTitle"> Wants Alerts</p>
       </p>
     </div>
 
+    <img class="faceCircles" alt="Picture of Research Subject" src="myimages/tier5/research/nancy.png">
+
     <div class= "square heavyText">
-      <p>&#34;Guessing emails takes a long time and usually involves a lot of trial and error.&#34;
-      </p>
+      <p>&#34;WebMD can be so frustrating. I will be clicking on news for high blood pressure and then I am in some ad. I don’t know how I got there and now I am lost in the site.&#34;</p>
+      <p class="interviewTitle"><b>Nancy</B>, 68, Scrum Master</p>
+
       </div>
 
-    <img class="faceCircles" alt="3 Circles" src="myimages/tier5/research/salesman1.png">
+
 
   </div>
 
@@ -266,12 +265,14 @@
       </p>
     </div>
 
+    <img class="faceCircles" alt="Picture of WEbMD Users" src="myimages/tier5/research/ajay-round.png">
+
     <div class= "square heavyText">
       <p>&#34;You can&#39;t waste time with Millennials. You have to tailor your communications to their behavior.&#34;
       </p>
       </div>
 
-    <img class="faceCircles" alt="3 Circles" src="myimages/tier5/research/ajay-round.png">
+
 
   </div>
 
@@ -284,7 +285,7 @@
     <div class="findingsCircle1 webmdGreenBack"></div>
 
     <div class="findingsText">
-        <p class="heavyText"><span class= "bold700">There are two very distinct types of salespeople with different requirements</span>: targeted bulk leads or targeted individual search.</p>
+        <p class="heavyText">Lot’s of people go to WebMD (becasue of SEO), but they go infrequently and don’t stay long</p>
     </div>
 </div>
 
@@ -293,7 +294,7 @@
 
     <div class="findingsText">
 
-          <p class="heavyText"><span class= "bold700"> This validated our strategic recommendation to add &#34;nurturing&#34; capabilities</span> to Tier5&#39;s design, something high in demand for both key types of salespeople.</p>
+          <p class="heavyText"><span class= "bold700">People get lost in the sea of health information,</span> often scary, ad-filled, and not pertinent to them of their family</p>
     </div>
 </div>
 
@@ -302,7 +303,7 @@
 
     <div class="findingsText">
 
-        <p class="heavyText"><span class= "bold700">Users are willing to give feedback to improve Tier5&#39;s algorithm.</span> This has business implications as users may trial the product longer to verify if data improves.</p>
+        <p class="heavyText">Validated WebMD’s concerns that people need a more personalized experience</p>
     </div>
 </div>
 
@@ -310,7 +311,7 @@
     <div class="findingsCircle webmdGreenBack"></div>
 
     <div class="findingsText">
-      <p class="heavyText">Harnassing <span class= "bold700">social media and Klout scores are integral for users</span> to better connect with growing millennial market.</p>
+      <p class="heavyText">It became clear that WebMD needs to make some major changes or implement a really innovative idea to take a ~4x per year visitor to someone that uses WebMD as part of a daily habit </p>
     </div>
 
 </div>
