Add research interviews webMD

--- a/webmdtemp1.html
+++ b/webmdtemp1.html
@@ -94,7 +94,7 @@
             </div>
         </div>
 
-        <div class="processSectionTitle row processCircleFix">Strategy</div>
+        <div class="processSectionTitle strategy row processCircleFix">Strategy</div>
 
         <div class= "ourApproachTitle webmdGreen">Our Strategic Approach</div>
 
@@ -191,101 +191,79 @@
       <img class="researchSummary" alt="Summary of Research" src="myimages/webmd/research/research-summary.png">
     </div>
 
-  <div><p class="statement">Survey resulted in 3 key insights.</p></div>
+  <div><p class="statement webmdBlue">Survey resulted in 3 key insights.</p></div>
 
 
-<div><p class="statement">In-depth interview insights</p></div>
+<div><p class="statement webmdGreen ">In-depth interview insights</p></div>
 
 <div class="squareRec">
 
   <div class="squareRecSec recPaddimg">
-    <div class="rec rec1">
-      <p class="interviewTopTitle"> Wants Alerts</p>
+    <div class="rec rec1 webmdBlueBack white">
+      <p class="interviewTopTitle"> Wants alerts</p>
     </div>
     <img class="faceCircles" alt="Picture of Research Subject" src="myimages/webmd/research/warren.png">
     <div class= "square heavyText">
-      <p>&#34;I could see using one in the future, especially if it would alert someone automatically if I had a stroke…or would remind me to take my meds, I wouldn’t forget like I do now.&#34;</p>
-      <p class="interviewTitle"><b>Warren</b>, 95, Retired</p>
+      <p class="interviewTitle webmdBlue"><b>Warren</b>, 95</p>
+      <p class="interviewTitle webmdBlue">Retired Forester</p>
+      <p>&#34;I could see using one in the future, <b>especially if it would alert someone automatically if I had a stroke or remind me to take my meds</b>, I wouldn&#39;t forget like I do now.&#34;</p>
+
     </div>
   </div>
 
   <div class="squareRecSec recPaddimg">
-    <div class="rec rec2">
-        <p class="interviewTopTitle"> Wants Alerts</p>
+    <div class="rec rec2 lightBlueBack ">
+        <p class="interviewTopTitle"> Get's lost </p>
       </p>
     </div>
 
-    <img class="faceCircles" alt="Picture of Research Subject" src="myimages/tier5/research/nancy.png">
+    <img class="faceCircles" alt="Picture of Research Subject" src="myimages/webmd/research/nancy.png">
 
-    <div class= "square heavyText">
-      <p>&#34;WebMD can be so frustrating. I will be clicking on news for high blood pressure and then I am in some ad. I don’t know how I got there and now I am lost in the site.&#34;</p>
-      <p class="interviewTitle"><b>Nancy</B>, 68, Scrum Master</p>
-
+    <div class= "square heavyText ">
+      <p class="interviewTitle webmdBlue"><b>Nancy</B>, 68</p>
+        <p class="interviewTitle webmdBlue">Retired Teacher</p>
+      <p>&#34;WebMD can be so frustrating. I will be clicking on news for high blood pressure and then I am in some ad. I don&#39;t know how I got there, <b>and now I am lost in the site.</b>&#34;</p>
       </div>
-
-
 
   </div>
 
   <div class="squareRecSec recPaddimg">
-
-    <div class="rec rec3">
-      <p>Want distilled, relevant, personal information
-      </p>
+    <div class="rec rec4 lightGreyBack charcol">
+      <p> Changes preferences often</p>
     </div>
 
+    <img class="faceCircles" alt="3 Circles" src="myimages/webmd/research/alyshia.png">
+
     <div class= "square heavyText">
-      <p>&#34;My biggest pain point is distilling information about the person...so I can come off smarter.&#34;
-      </p>
-      </div>
+      <p class="interviewTitle webmdBlue"><b>Alyshia</B>, 40</p>
+      <p class="interviewTitle webmdBlue">Business Owner</p>
+      <p>&#34;<b>I need to modify my preferences on-the-go.</b> I already had my baby I don&#39;t want to get pregnancy articles anymore.&#34;</p>
 
-    <img class="faceCircles" alt="3 Circles" src="myimages/tier5/research/saleswoman2.png">
-
-  </div>
-
-  <div class="squareRecSec recPaddimg">
-
-    <div class="rec rec4">
-      <p>Want control over the prospecting process
-      </p>
     </div>
-
-    <div class= "square heavyText">
-      <p>&#34;Outsourcing the prospecting process is time consuming and frustrating.&#34;
-      </p>
-      </div>
-
-    <img class="faceCircles" alt="3 Circles" src="myimages/tier5/research/salesman2.png">
-
   </div>
 
   <div class="squareRecSec">
-    <div class="rec rec5 ">
-      <p>Different age groups require different contact methods
-      </p>
+    <div class="rec rec5 charcolBack">
+      <p>Loves apps with personalized news</p>
     </div>
-
-    <img class="faceCircles" alt="Picture of WEbMD Users" src="myimages/tier5/research/ajay-round.png">
-
+      <img class="faceCircles" alt="3 Circles" src="myimages/webmd/research/sarah.png">
     <div class= "square heavyText">
-      <p>&#34;You can&#39;t waste time with Millennials. You have to tailor your communications to their behavior.&#34;
-      </p>
+        <p class="interviewTitle webmdBlue"><b>Sarah</b>, 20</p>
+          <p class="interviewTitle webmdBlue">Store Manager</p>
+        <p>&#34;A health care <b>app with info only important to me. That would be so cool.</b>&#34;</p>
       </div>
-
-
-
-  </div>
+    </div>
 
 </div>
 
+  <div><p class="statement webmdBlue">Initial research findings</p></div>
 
-  <div><p class="statement">Initial research findings</p></div>
-
+<div class="">
 <div class="findings">
     <div class="findingsCircle1 webmdGreenBack"></div>
 
     <div class="findingsText">
-        <p class="heavyText">Lot’s of people go to WebMD (becasue of SEO), but they go infrequently and don’t stay long</p>
+        <p class="heavyText">Lot&#39;s of <b>people go to WebMD</b> (becasue of SEO), but they go <b>infrequently and don&#39;t stay long</b></p>
     </div>
 </div>
 
@@ -303,7 +281,7 @@
 
     <div class="findingsText">
 
-        <p class="heavyText">Validated WebMD’s concerns that people need a more personalized experience</p>
+        <p class="heavyText"><b>Validated WebMD&#39;s concerns that people need a more personalized experience</b></p>
     </div>
 </div>
 
@@ -311,9 +289,10 @@
     <div class="findingsCircle webmdGreenBack"></div>
 
     <div class="findingsText">
-      <p class="heavyText">It became clear that WebMD needs to make some major changes or implement a really innovative idea to take a ~4x per year visitor to someone that uses WebMD as part of a daily habit </p>
+      <p class="heavyText">It became clear that <b>WebMD needs to make some major changes or implement a really innovative idea to take a ~4x per year visitor to</b> someone that uses WebMD as part of <b>a daily habit</b></p>
     </div>
 
+</div>
 </div>
 
 <div class="processSectionTitle" id="synthesisSection">Synthesis</div>
