Adding bold to interview insights

--- a/webmdtemp1.html
+++ b/webmdtemp1.html
@@ -193,7 +193,6 @@
 
   <div><p class="statement webmdBlue">Survey resulted in 3 key insights.</p></div>
 
-
 <div><p class="statement webmdGreen ">In-depth interview insights</p></div>
 
 <div class="squareRec">
@@ -222,7 +221,7 @@
     <div class= "square heavyText ">
       <p class="interviewTitle webmdBlue"><b>Nancy</B>, 68</p>
         <p class="interviewTitle webmdBlue">Retired Teacher</p>
-      <p>&#34;WebMD can be so frustrating. I will be clicking on news for high blood pressure and then I am in some ad. I don&#39;t know how I got there, <b>and now I am lost in the site.</b>&#34;</p>
+      <p>&#34;WebMD can be so frustrating. I will be clicking on news for high blood pressure and <b>then I am in some ad</b>. I don&#39;t know how I got there, <b>and now I am lost in the site.</b>&#34;</p>
       </div>
 
   </div>
